--- a/css/bienvenido.css
+++ b/css/bienvenido.css
@@ -56,26 +56,34 @@ h1 ,h2, h3, h4, h5 ,h6{
 }
 /*---------Estilos del menu----------*/
 .main-nav{
-    width: 100px;
+    width: 100%;
     position: relative;
     z-index: 2000;
     padding: 10px;
 }
-.icon-menu{
+.icon-barra{
     display: block;
     color: white;
+    border: 1px solid white;
+    border-radius: 3px;
+    width: 40px;
+    height: 40px;
+    line-height: 45px;
+    text-align: center;
+    cursor: pointer;
+    font-size: 1.5em;
 }
 .social-icon{
     display: flex;
     justify-content: space-between;
 }
-.social-icon[class*="icon"]{
+.social-icon [class*="icon-"]{
     color: black;
     margin-left: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1,3em;
+    font-size: 1.3em;
     width: 35px;
     height: 35px;
     background: white;
@@ -95,6 +103,10 @@ h1 ,h2, h3, h4, h5 ,h6{
     margin: 0;
     list-style: none;
     text-align: center;
+    height: 0;
+    overflow: hidden;
+    transition: height .3s linear;
+
 }
 .menu__link{
     display: block;
@@ -102,6 +114,62 @@ h1 ,h2, h3, h4, h5 ,h6{
     color: white;
     text-decoration: none;
 }
+.menu__link:hover{
+    background: #DE423A;
+}
+.menu__link--select{
+    background: #DE423A;
+
+}
+.mostrar{
+    height: 196px;
+}
+
+/*-------ESTILO DE BANNER-------*/
+.banner{
+    margin-top: -55px;
+    position:relative;  
+}
+.banner::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 1000;
+    top: 0;
+}
+.banner__img{
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+}
+.banner__content{
+    width: 90%;
+    color: white;
+    text-align: center;
+    position: absolute;
+    z-index: 1500;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%)translateY(-50%);
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
