--- a/css/bienvenido.css
+++ b/css/bienvenido.css
@@ -264,15 +264,16 @@ h1 ,h2, h3, h4, h5 ,h6{
         margin-top: -145px;
         z-index: -1000;
     }
+    .banner__img{
+        height: 600px;
+    }
     .banner__content{
         font-size: 2em;
     }
-    .column--50{
-        width: 49%;    
+    .main{
+        padding-bottom: 15px;
     }
-    .column--50-25{
-        width: 49%;
-    }
+    
     .main__about__description .column:nth-child(2){
         padding-left: 20px;
         font-size: .9em;
@@ -284,13 +285,125 @@ h1 ,h2, h3, h4, h5 ,h6{
         border: 5px solid #ddd;
         padding: 5px;
     }
+    .today-special__img{
+        height: 200px;
+        object-fit: cover;
 
-
+    }
+    .main-footer .container--flex{
+        align-items: flex-start;
+    }
+    .column--50{
+        width: 49%;    
+    }
+    .column--50-25{
+        width: 49%;
+    }
+    .column--33{
+        width: 32%;
+    }
 
 
 } 
+@media screen and (min-width:768px){
+    .main-__title{
+        font-size: 2.2em;
+    }
+.main__about__description{
+    margin-top: 30px;
+}
+.main__about__description .column--50:nth-child(2){
+    font-size: 1em;
+}
+.main__about__description .column--50:nth-child(2) .column__txt{
+    line-height: 30px;
+}
+.column--50-25{
+    width: 24.5%;
+}
+.column__title{
+    font-size: 1em;
+}
+.group__title{
+    font-size: 2.2em;
+}
 
 
+}
+@media screen and (min-width:1024px){
+    .container{
+        width: 1000px;
+    }
+    .logo{
+        font-size: 2em;
+        padding: 0;
+    }
+    .main-header__contactInfo__phone,
+    .main-header__contactInfo__address{
+        padding-right: 0;
+        font-size: 1.15em;
+        
+    }
+    .main-nav{
+        padding: 0;
+    }
+    .banner__img{
+        height: 700px;
+    }
+    .banner__content{
+        font-size: 2.5em;
+    }
+    .icon-barra{
+        display: none;
+    }
+    .menu{
+        position: static;
+        display: flex;
+        height: auto;
+        width: auto;
+    }
+    .menu__link{
+        padding: 20px;
+    }
+    .group--color .container{
+        margin-top: 30px;
+        margin-bottom: 30px;
+        padding: 20px;
+    }
+    .main__title{
+        font-size: 2.3em;
+    }
+.main__about__description .column--50:nth-child(2) .column__txt{
+    line-height: 45px;
+}
+.today-special__title{
+    font-size: 1.4em;
+}
+.today-special__price{
+    font-size: 1.8em;
+}
+.main-footer{
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+}
+@media screen and (min-width:1600px){
+.container{
+    width: 1400px;
+}
+.banner__img{
+    height: 800px;
+}
+.main__about__description .column:nth-child(1) img{
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+.today-special__img{
+    height: 300px;
+}
+}
 
 
 
